2008-01-13  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/gtkentryaction.c: 
	* src/gtkentryaction.h: 
	* src/yelp-window.c: 
	Make / activate find
	Make find go away when losing focus (like epiphany)
	
	
	* src/yelp-window.c: 
	Fix crash on going backward then forward after
	an external link (bug #487849)

	* data/toc.xml.in: 
	Fix Games category
	
	* data/toc.xml.in: 
	Fix some menu titles to be non-insane names
	Add translator comments to unclear menu entries
	

2008-01-10  Don Scorgie  <dscorgie@svn.gnome.org>

	* yelp.desktop.in.in: 
	Remove depreciated items
	(bug #500483)
	
	* src/yelp-search-parser.c: 
	Fix potential crash when comment is NULL
	(bug #501559 - Matt Keenan)
	
	* src/yelp-gecko-services.cpp: 
	Fix crash on shutdown using xulrunner 1.8.x
	(bug #503317 -  Markus Kanet)
	
	* src/yelp-search-parser.c: 
	Get a beagle client if it's available
	allowing beagle to be used again
	(bug #504163)

=== 2.21.2 ===
2008-01-07  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in:
	* NEWS:
	Version 2.21.2

2008-01-07  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in: 
	* src/yelp-io-channel.c:
	* src/yelp-info-parser.c:
	* src/yelp-utils.c:
	* src/Makefile.am:
	Add LZMA support
	bug #470990 - Per Øyvind Karlsen

	* src/yelp-window.c: 
	Fix find bar up to look more like epiphany
	Bug #483305 - Michael Monreal
	
	* src/yelp-settings.c: 
	Make colours reflect theme better

	* src/yelp-search-parser.c:
	Fix crash on NULL search string.  Again.
	Correct a small typo in translator comment

	* README:
	Update slightly to remove scrollkeeper references
	
2008-01-04  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- String corrections from Seán de Búrca, fixed #505797

=== 2.21.1 ===
2007-12-03  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in:
	* NEWS:
	Version  2.21.1

2007-11-27  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-toc.c:
	* src/yelp-search-parser.c:
	* src/yelp-utils.c:
	* data/toc.xml.in:
	* stylesheets/toc2html.xsl: